# hzcl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hz_config.h
examples/lvgl_simulator/: README.md
examples/lvgl_simulator/desk_pet/: .gitignore  CMakeLists.txt  CMakePresets.json  REQUIREMENTS.md  vcpkg-configuration.json  vcpkg.json
examples/lvgl_simulator/desk_pet/design/: README.md  desk_pet_prototype.html  desk_pet_prototype_annotated.html
examples/lvgl_simulator/desk_pet/inc/: lv_conf.h
examples/lvgl_simulator/desk_pet/res/fonts/: mdi_icons.h  mdi_icons_20.c
examples/lvgl_simulator/desk_pet/src/: app.h  hz_platform_sdl2.c  main.c  pet_face.c  pet_face.h  util_screenshot.c  util_screenshot.h
examples/lvgl_simulator/desk_pet/src/init/: alarms.c  alarms.h  config.c  config.h  events.c  events.h  fsm.c  fsm.h  lvgl.c  lvgl.h  modes.c  modes.h  sensors.c  sensors.h  timers.c  timers.h
examples/lvgl_simulator/desk_pet/src/screens/: pet_about.c  pet_about.h  pet_chat.c  pet_chat.h  pet_dash.c  pet_dash.h  pet_face.c  pet_face.h  pet_home.c  pet_home.h  pet_screen.c  pet_screen.h  pet_settings.c  pet_settings.h  screen_about.c  screen_hmi.c  screen_hmi.h  screen_home.c  screen_settings.c  screen_stats.c
examples/lvgl_simulator/toothbrush/: CMakeLists.txt  REQUIREMENTS.md
examples/lvgl_simulator/toothbrush/inc/: lv_conf.h
examples/lvgl_simulator/toothbrush/src/: fsm.c  fsm.h  main.c
examples/lvgl_simulator/toothbrush/src/screens/: screen_ready.c  screen_sleep.c  screen_stats.c  screen_working.c
hal/: hz_hal.h  hz_hal_actuator.h  hz_hal_display.h  hz_hal_sensor.h
src/: hz_alarm.c  hz_alarm.h  hz_calib.c  hz_calib.h  hz_config_mgr.c  hz_config_mgr.h  hz_event.c  hz_event.h  hz_fsm.c  hz_fsm.h  hz_init_mgr.c  hz_init_mgr.h  hz_mode.c  hz_mode.h  hz_platform.h  hz_platform_template.c  hz_power.c  hz_power.h  hz_screen.c  hz_screen.h  hz_sensor.c  hz_sensor.h  hz_sensor_filter.c  hz_sensor_filter.h  hz_timer.c  hz_timer.h  hz_types.h
